@@ -1,5 +1,9 @@
 2001-11-01 Alexander Rawass <alexannika@users.sourceforge.net>
 	
+	* added setVariable to config_xml
+
+2001-11-01 Alexander Rawass <alexannika@users.sourceforge.net>
+	
 	* tried to match Daniel's request for color sections
 	* transformed easyDomFactory to template class
 	* modified config_xml to use configNode instead of easyDomNode
